# lspba

./: README.md  preprocessing.py  robust_mean.py
optimization/: CMakeLists.txt  lm.cpp  robust_mean.cpp
optimization/include/optimization/: camera.h  ceres_problem.h  io.h  local_parameterization_se3.h  problem_parameters.h  residuals.h  steps.h  test_jacobians.h  utils.h
preprocessing/: gui.py  preprocessing.py  robust_mean.py  utils.py  visualization.py  visualizer.py
